components/apps/postgresql/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-private-network-to-postgresql-${PSQL_POSTFIX:=instance}
  namespace: <NAMESPACE>
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  ingress:
    - from:
        - ipBlock:
            cidr: ${PRIVATE_IP_CIDR:=10.0.0.0/8}
      ports:
        - port: 5432
  policyTypes:
    - Ingress
